--- a/GraphicsViewTests/GraphicsViewTests.vcxproj
+++ b/GraphicsViewTests/GraphicsViewTests.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="src\cGridItem.cpp" />
     <ClCompile Include="src\EditableItem.cpp" />
     <ClCompile Include="src\ToolModel.cpp" />
+    <ClCompile Include="src\ToolSimpleBrush.cpp" />
     <ClCompile Include="ToolBase.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +139,7 @@
     <QtRcc Include="cMainWindow.qrc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ToolSimpleBrush.h" />
     <QtMoc Include="ToolBase.h" />
     <QtMoc Include="ColorSwatch.h" />
     <QtMoc Include="colorPicker.h" />
