--- a/GraphicsViewTests/GraphicsViewTests.vcxproj.filters
+++ b/GraphicsViewTests/GraphicsViewTests.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="cHUDHandle.cpp">
       <Filter>src\HUD</Filter>
     </ClCompile>
+    <ClCompile Include="cHUDTransform.cpp">
+      <Filter>src\HUD</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="cMainWindow.h">
@@ -265,6 +268,9 @@
       <Filter>src\HUD</Filter>
     </ClInclude>
     <ClInclude Include="cHUDHandle.h">
+      <Filter>src\HUD</Filter>
+    </ClInclude>
+    <ClInclude Include="cHUDTransform.h">
       <Filter>src\HUD</Filter>
     </ClInclude>
   </ItemGroup>
