--- a/GraphicsViewTests/GraphicsViewTests.vcxproj
+++ b/GraphicsViewTests/GraphicsViewTests.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BenchmarkStuff.cpp" />
+    <ClCompile Include="cBaseData.cpp" />
     <ClCompile Include="cConvolution.cpp" />
     <ClCompile Include="cHUDHandle.cpp" />
     <ClCompile Include="cHUDItem.cpp" />
@@ -162,6 +163,7 @@
     </QtMoc>
     <ClInclude Include="BenchmarkStuff.h" />
     <ClInclude Include="Blending.h" />
+    <ClInclude Include="cBaseData.h" />
     <ClInclude Include="cConvolution.h" />
     <ClInclude Include="cHUDHandle.h" />
     <ClInclude Include="cHUDItem.h">
